--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body{
-    margin: 0;
+    margin: 0!important;
+    padding: 0!important;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -23,27 +24,28 @@ h2{
     text-align: center;
 }
 
-  
-
-
 
 /* MENU */
-nav{
-    background-color: white;
+.nav-menu {
+    width: 100vw;
     height: 80px;
     display: flex;
-    justify-content: space-between;
+    position: fixed;
+    justify-content: space-around;
     flex-direction: row;
-    border: black solid 2px;
-    padding: 0 20px;
+    margin: 0;
+    padding: 0;
+    background-color: white;
+    box-shadow: 0px 6px 8px rgba(0, 0, 0,0.1); 
+    z-index: 2;
 }
 
-nav img{
+.nav-menu img{
     width: 50px;
     height: 50px;
 }
 
-nav a{
+.nav-menu a{
     font-family: 'Tajawal', sans-serif;
     text-decoration: none;
     color: black;
@@ -51,13 +53,34 @@ nav a{
     font-style: initial;
 }
 
-#menu{
+.nav-items {
     height: 80px;
     display: flex;
     align-items: center;
     width: 30vw;
     justify-content: space-between;
     flex-direction: row;
+}
+
+.btn-nav button { 
+    font-family: 'MontSerrat';
+    font-weight: 500;
+    width: 150px;
+    height: 40px;
+    border: 1px solid white;
+    border-radius: 100px;
+    background-color: white;
+    cursor: pointer;
+    transition: 0.4s ease-out;
+}
+.btn-nav button:hover {
+    transition: 0.5s;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+    border: 1px solid #00ADDE;
+
+}
+.btn-nav button:focus {
+    outline: none;
 }
 
 .botão {
@@ -79,81 +102,184 @@ nav a{
 
 
 
+/* overlay bacana */
+
+#overlay {
+    width: 100vw;
+    height: 68vh;
+    position: absolute;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background: rgb(0,0,0);
+    background: -moz-linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,212,255,0) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,212,255,0) 100%);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,212,255,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#00d4ff",GradientType=1);
 
 
-/* Banner - Aside */
-aside{
+}
+
+/* Banner - aside */
+.banner-container {
+
+    width: 100vw;
+    height: 68vh;
+position: relative;
     display: flex;
-    background-color: lightgray;
-    overflow: auto;
-    padding: 0 20px;
-    color: black;
-    height: 580px;
     flex-direction: column;
     justify-content: center;
-    border: black solid 2px;
+    align-items: flex-start;
+    background-image: url("../img/slide-1.jpeg");
+    background-size: cover;
+    background-position-y: 40%;
+    margin: 0;
+    padding: 0;
+    z-index: 0;
+    overflow: hidden;
+
+}
+.call-banner {
+
+    display: flex;
+    height: 300px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+
     }
 
-aside > div{
+ .call-text {
+
     display: flex;
+    justify-content: center;
     margin-left: 178px;
     flex-direction: column;
+    z-index: 1;
+    
+
 }  
 
-aside p{
-    font-size: 1.6rem;
+.call-text  h1{
+    font-size: 3rem;
+    font-weight: 500;
+    justify-content: flex-start;
+    text-align: start;
+    color: white;
+    font-weight: 700;
+    margin: 0;
+    padding: 5px 0;
+}
+
+.call-text  p  { 
+
+    font-size: 1.5rem;
     font-weight: 500;
     line-height: 25px;
-    margin: 0 12px;  
+    margin: 0; 
+    padding: 5px 0;
     padding-bottom: 20px;
     justify-content: flex-start;
-    color:  black;
     text-align: start;
+
 }
-.img{
+
+
+.btn-banner button { 
+    font-family: 'MontSerrat';
+    font-weight: bold;
+    width: 150px;
+    height: 40px;
+    border: none;
+    border-radius: 4px;
+    background-color: white;
+    cursor: pointer;
+    transition: 0.4s ease-out;
+
+}
+
+.btn-banner button:hover {
+
+    transition: 0.4s ease-in;
+    background-color: #00ADDE;
+    color: white;
+    border-radius: 100px;
+}
+
+.btn-banner button:focus {
+    outline: none;
+}
+
+
+.call-banner  .icons {
+
     display: flex;
     position: relative;
     justify-content: space-between;
-    width: 360px;
+    width: 330px;
     flex-direction: row;
     padding: 20px 0;
 }
 
 .sociais{
-    padding: 15px;
-    flex-direction: row;
-    background-color: white;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    border-radius: 50%;
-    width: 8px;
-    height: 8px;
+    flex-direction: row;
+    border: 1px solid white;
+    text-align: center;
+    border-radius: 50px;
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
+    transition: 0.4s ease-out;
 }
 
 
+.sociais:hover {
+    transition: 0.4s ease-in;
+    background-color: white;
+    color: black;
+    
+}
 
 
 
 
 /* Section com os botões de atalho para inscrição de empresas e jovens*/
-.atalho{
-    border: black solid 2px;    
+
+.first-section {
+    height: 40vh;
+    width: 100vw;  
     display: flex;
     align-items: center;
     flex-direction: row;
     justify-content: center;
-    padding: 40px;
+    background-color: white;
+ 
 }
 
 .bloco{
-    border: black solid 2px; 
-    border-radius: 15px;
+background-color: white;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     flex-direction: column;
     padding: 25px;   
     width: 20%;
-    height: 150px;
+    height: 180px;
     margin: 0 70px;
+    transition: 0.4s ease-in;
+    box-shadow: 0px 0px 4px rgba(0,0,0,0.1);
+
+}
+
+.bloco:hover {
+
+    box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
+    transition: 0.4s ease-in;
+   transform:  scale(1.04);
 }
 
 .bloco p {
@@ -161,22 +287,34 @@ aside p{
     font-weight: bold;
     line-height: 20px;
     justify-content: flex-start;
-    color:  black;
+    color:  #333;
     text-align: center;
     width: 250px;
-    padding: 15px;
+    padding: 10px;
 }
 
 .bloco button{
     background-color: white;
     padding: 8px 30px;
-    margin-top: 20px;
+    margin-top: 10px;
     border-radius: 12px;
-    border: black solid 1px;
     font-size: 1rem;
+    border: white solid 1px;
     color: black;
 }
 
+.bloco button:hover {
+
+    color: black;
+    border-radius: 100px;
+    border: 1px solid #00ADDE;
+    box-shadow: 0px 0px 4px rgba(0,0,0,0.2);
+    transition: 0.4s ease-in;
+}
+
+.bloco button:focus {
+    outline: none;
+}
 
 
 
@@ -192,7 +330,6 @@ aside p{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    border: black solid 2px;
     width: 100%;
     }
 
